# educa

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
chat/: consumers.py  routing.py  urls.py  views.py
chat/templates/chat/: room.html
courses/: admin.py  urls.py  views.py
courses/api/: serializers.py  urls.py  views.py
courses/fixtures/: subjects.json
courses/migrations/: 0001_initial.py  0002_course_students.py
courses/templates/courses/course/: list.html
data/db/: postmaster.pid
data/db/global/: 1260  pg_control
data/db/pg_stat_tmp/: global.stat
educa/: .env  asgi.py  urls.py
educa/settings/: base.py  local.py  prod.py
ssl/: educa.crt  educa.key
students/: urls.py  views.py
students/management/commands/: enroll_reminder.py
